--- a/fly.toml
+++ b/fly.toml
@@ -14,6 +14,7 @@ primary_region = 'gig'
   auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
+  max_machines_ruining = 1
   processes = ['app']
 
 [[vm]]
